byte-code-compiler/test_files/typing/bad/testfile-redef-8.psc

struct S {
  int_32 a;
};

int_32 main() {
  int_32 x;
  struct S* x;
}
